--- a/7-dars json-server/index.html
+++ b/7-dars json-server/index.html
@@ -5,10 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
 
+      <main>
+        <form method="post" name="person">
+            <h4>Person Database Local server</h4>
+            <input type="text" name='name' placeholder="Please enter your name"/>
+            <input type="number" name="age" placeholder="Please enter your age"/>
+            <input type="text" name="occupation" placeholder=" Please enter your ocupation"/>
+            <button type="submit">
+                send
+            </button>
+        </form>
+    </main>
     
     <script src="./app.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
