--- a/HealthCare/bemorlar.html
+++ b/HealthCare/bemorlar.html
@@ -97,6 +97,9 @@
                 </div>
             </div>
         </section>
+        <div class="message">
+            <i class="fa-solid fa-person-circle-plus"></i>
+        </div>
     </main>
    
     <script src="./js/index.js"></script>
